encode password with Bcrypt